corrections et readme

--- a/python_datasc/manip_sklearn_neural_multicouche.ipynb
+++ b/python_datasc/manip_sklearn_neural_multicouche.ipynb
@@ -161,7 +161,7 @@
    "id": "9490538d",
    "metadata": {},
    "source": [
-    "### Création d'un deuxieme jeu de données: les entrants sont pertubés mais le resultats doit rester le même"
+    "### Création d'un deuxieme jeu de données: les entrants sont pertubés mais le resultat doit rester le même"
    ]
   },
   {
