--- a/python_datasc/pandas_sql.ipynb
+++ b/python_datasc/pandas_sql.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dp = pd.DataFrame.read_from_sql_query('select * from ', conn)"
+    "dp = pd.read_sql('select * from acteurs', conn, index_col = 'id_acteur')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nom_acteur</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id_acteur</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aaron Eckhart</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adel Karam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adolphe Menjou</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adrien Brody</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Agnes Moorehead</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>705</th>\n",
+       "      <td>Zac Efron</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>706</th>\n",
+       "      <td>Zachary Scott</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>707</th>\n",
+       "      <td>Zain Al Rafeea</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>708</th>\n",
+       "      <td>Zazie Beetz</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>709</th>\n",
+       "      <td>Zoe Saldana</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>709 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                nom_acteur\n",
+       "id_acteur                 \n",
+       "1            Aaron Eckhart\n",
+       "2               Adel Karam\n",
+       "3           Adolphe Menjou\n",
+       "4             Adrien Brody\n",
+       "5          Agnes Moorehead\n",
+       "...                    ...\n",
+       "705              Zac Efron\n",
+       "706          Zachary Scott\n",
+       "707         Zain Al Rafeea\n",
+       "708            Zazie Beetz\n",
+       "709            Zoe Saldana\n",
+       "\n",
+       "[709 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -45,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
