--- a/blog/support_regex.ipynb
+++ b/blog/support_regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "274dea2f",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,12 @@
    "id": "e782f333",
    "metadata": {},
    "source": [
-    "### Utilisation des groupes pour détecter la répetitions d'un mot à la suite."
+    "### Utilisation des groupes pour détecter la répetition d'un mot à la suite."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "da1aa9b5",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "46e4fcb1",
    "metadata": {},
    "outputs": [
@@ -48,16 +48,16 @@
      "output_type": "stream",
      "text": [
       "('Bonjour', 'je')\n",
-      "0 => Bonjour je\n",
-      "1 => Bonjour\n",
-      "2 => je\n"
+      "0 => Bonjour je (0, 10)\n",
+      "1 => Bonjour (0, 7)\n",
+      "2 => je (8, 10)\n"
      ]
     }
    ],
    "source": [
     "print(result.groups())\n",
     "for cp in range(len(result.groups()) + 1):\n",
-    "    print(cp,'=>', result.group(cp) )"
+    "    print(cp,'=>', result.group(cp), result.span(cp) )"
    ]
   },
   {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "8b7fe17b",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "38a5029d",
    "metadata": {},
    "outputs": [
@@ -106,16 +106,16 @@
      "output_type": "stream",
      "text": [
       "('suis', 'suis')\n",
-      "0 => suis suis\n",
-      "1 => suis\n",
-      "2 => suis\n"
+      "0 => suis suis (11, 20)\n",
+      "1 => suis (11, 15)\n",
+      "2 => suis (16, 20)\n"
      ]
     }
    ],
    "source": [
     "print(result.groups())\n",
     "for cp in range(len(result.groups()) + 1):\n",
-    "    print(cp,'=>', result.group(cp) )"
+    "    print(cp,'=>', result.group(cp), result.span(cp) )"
    ]
   },
   {
@@ -141,12 +141,12 @@
    "id": "ff6198c7",
    "metadata": {},
    "source": [
-    "Le reference au 1er groupe (\\1) peut etre remplacé par le nom du groupe"
+    "Le reference au 1er groupe (\\1) peut etre remplacée par le nom du groupe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "fa8c2ae4",
    "metadata": {},
    "outputs": [
@@ -155,16 +155,16 @@
      "output_type": "stream",
      "text": [
       "('suis', 'suis')\n",
-      "0 => suis suis\n",
-      "1 => suis\n",
-      "2 => suis\n"
+      "0 => suis suis (11, 20)\n",
+      "1 => suis (11, 15)\n",
+      "2 => suis (16, 20)\n"
      ]
     }
    ],
    "source": [
     "print(result.groups())\n",
     "for cp in range(len(result.groups()) + 1):\n",
-    "    print(cp,'=>', result.group(cp) )"
+    "    print(cp,'=>', result.group(cp), result.span(cp) )"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "source": [
     "print(result.groups())\n",
     "for cp in range(len(result.groups()) + 1):\n",
-    "    print(cp,'=>', result.group(cp) )"
+    "    print(cp,'=>', result.group(cp), result. )"
    ]
   },
   {
@@ -291,16 +291,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "7f4c3706",
+   "cell_type": "markdown",
+   "id": "8d359918",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Exemple de recherche avant: on veut tronconner la chaine par groupe de 2 en partant de la fin.\n",
+    "\n",
+    "Avant de capturer un groupe, on va chercher à former des paires complète en avant du groupe à capturer.\n",
+    "\n",
+    "Pour cela on utilise la sequence de groupe **(?=...)**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 27,
    "id": "d27c3a48",
    "metadata": {},
    "outputs": [
@@ -322,9 +326,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c45cb053",
+   "metadata": {},
+   "source": [
+    "#### En ajoutant aux bons endroits le motif  \"?:\" on ne capture plus les groupes inutiles\n",
+    "Le motif **(?:...)** permet d'effectuer de regroupement mais ne conserve pas la capture dans un groupe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "aa320fcf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1',) (0, 1)\n",
+      "('23',) (1, 3)\n",
+      "('45',) (3, 5)\n",
+      "('67',) (5, 7)\n",
+      "('89',) (7, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in re.finditer(r'(\\d{1,2})(?=(?:\\d\\d)+(?!(?:\\d))|\\Z)', '123456789'):\n",
+    "    print(item.groups(),item.span())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa320fcf",
+   "id": "d95aeb7c",
    "metadata": {},
    "outputs": [],
    "source": []
