--- a/blog/support_regex.ipynb
+++ b/blog/support_regex.ipynb
@@ -292,14 +292,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d359918",
+   "id": "7004257e",
    "metadata": {},
    "source": [
     "#### Exemple de recherche avant: on veut tronconner la chaine par groupe de 2 en partant de la fin.\n",
     "\n",
     "Avant de capturer un groupe, on va chercher à former des paires complète en avant du groupe à capturer.\n",
     "\n",
-    "Pour cela on utilise la sequence de groupe **(?=...)**"
+    "Pour cela on utilise la sequence de groupe **(?=...)**  ou sa forme négative e **(?!...)**"
    ]
   },
   {
@@ -327,11 +327,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c45cb053",
+   "id": "720fb6d3",
    "metadata": {},
    "source": [
     "#### En ajoutant aux bons endroits le motif  \"?:\" on ne capture plus les groupes inutiles\n",
-    "Le motif **(?:...)** permet d'effectuer de regroupement mais ne conserve pas la capture dans un groupe"
+    "Le motif **(?:...)** permet d'effectuer de regroupement mais ne conserve pas la capture dans un groupe\n",
+    "\n"
    ]
   },
   {
@@ -358,12 +359,96 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d95aeb7c",
+   "cell_type": "markdown",
+   "id": "cc1ffe81",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### De manière symetrique à la recherche avant, il est possible de faire dépendre la recherche d'un motif sur du texte situé en arrière.\n",
+    "\n",
+    "Cette opération se réalise avec le motif **(?<=...)**  ou par sa négation **(?<!...)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf23cc57",
+   "metadata": {},
+   "source": [
+    "#### S assurer que le texte se termine strictement par 2 chiffres "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "32496736",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(5, 7), match='45'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "texte = 'abcde45'\n",
+    "result = re.search(r'\\d\\d', texte)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "95d00360",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 7), match='abcde45'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.search(r'\\D+\\d\\d', texte)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6d397515",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(5, 7), match='45'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.search(r'(?<=\\D)\\d\\d', texte)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4007391a",
+   "metadata": {},
+   "source": [
+    "### L'avantage des regards avant ou arrière (lookfor...) est qu'ils ne consomment pas de caractère. Il est donc possible de chainer les conditions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b22996e8",
+   "metadata": {},
+   "source": [
+    "#### Verification d'un identifiant twitter qui fait 6 caractères et un undescore mais pas aux extrmités"
+   ]
   }
  ],
  "metadata": {
