--- a/blog/support_regex.ipynb
+++ b/blog/support_regex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "274dea2f",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "da1aa9b5",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "46e4fcb1",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8b7fe17b",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "38a5029d",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "ae81421b",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "fa8c2ae4",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "5fc83303",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "0238f9e2",
    "metadata": {},
    "outputs": [],
@@ -197,18 +197,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "e949a5a6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('suis', 'suis')\n",
-      "0 => suis suis\n",
-      "1 => suis\n",
-      "2 => suis\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3886324264.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [10]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(cp,'=>', result.group(cp), result. )\u001b[0m\n\u001b[1;37m                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -235,41 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "1ee77ace",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "suis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(result.group('mot'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "bd9c76fe",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'suis'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "result.group(2)"
    ]
@@ -292,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7004257e",
+   "id": "a870824f",
    "metadata": {},
    "source": [
     "#### Exemple de recherche avant: on veut tronconner la chaine par groupe de 2 en partant de la fin.\n",
@@ -304,22 +283,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d27c3a48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('1', '89', None)\n",
-      "('23', '89', None)\n",
-      "('45', '89', None)\n",
-      "('67', '89', None)\n",
-      "('89', None, None)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for item in re.finditer(r'(\\d{1,2})(?=(\\d\\d)+(?!(\\d))|\\Z)', '123456789'):\n",
     "    print(item.groups())"
@@ -327,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "720fb6d3",
+   "id": "cb882de2",
    "metadata": {},
    "source": [
     "#### En ajoutant aux bons endroits le motif  \"?:\" on ne capture plus les groupes inutiles\n",
@@ -337,22 +304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "aa320fcf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('1',) (0, 1)\n",
-      "('23',) (1, 3)\n",
-      "('45',) (3, 5)\n",
-      "('67',) (5, 7)\n",
-      "('89',) (7, 9)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for item in re.finditer(r'(\\d{1,2})(?=(?:\\d\\d)+(?!(?:\\d))|\\Z)', '123456789'):\n",
     "    print(item.groups(),item.span())"
@@ -360,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc1ffe81",
+   "id": "aeb5e665",
    "metadata": {},
    "source": [
     "#### De manière symetrique à la recherche avant, il est possible de faire dépendre la recherche d'un motif sur du texte situé en arrière.\n",
@@ -370,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf23cc57",
+   "id": "2309f4f4",
    "metadata": {},
    "source": [
     "#### S assurer que le texte se termine strictement par 2 chiffres "
@@ -378,18 +333,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "32496736",
+   "execution_count": null,
+   "id": "5b03b25c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<re.Match object; span=(5, 7), match='45'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "texte = 'abcde45'\n",
     "result = re.search(r'\\d\\d', texte)\n",
@@ -398,18 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "95d00360",
+   "execution_count": null,
+   "id": "e0bd20f9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<re.Match object; span=(0, 7), match='abcde45'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = re.search(r'\\D+\\d\\d', texte)\n",
     "print(result)"
@@ -417,18 +356,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "6d397515",
+   "execution_count": null,
+   "id": "ca20e2d8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<re.Match object; span=(5, 7), match='45'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result = re.search(r'(?<=\\D)\\d\\d', texte)\n",
     "print(result)"
@@ -436,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4007391a",
+   "id": "2a460e0e",
    "metadata": {},
    "source": [
     "### L'avantage des regards avant ou arrière (lookfor...) est qu'ils ne consomment pas de caractère. Il est donc possible de chainer les conditions"
@@ -444,11 +375,77 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b22996e8",
+   "id": "63c942a0",
    "metadata": {},
    "source": [
-    "#### Verification d'un identifiant twitter qui fait 6 caractères et un undescore mais pas aux extrmités"
+    "#### Verification d'un identifiant twitter qui fait 6 caractères et un undescore mais pas aux extremités"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "05932b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 8), match='e_german'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "texte = '@e_german'\n",
+    "result = re.search(r'(?=[\\w_]{6,}).+', texte)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "2ef553f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(1, 9), match='e_german'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.search(r'(?=[\\w]+_[\\w]+)(.+)', texte)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "55206e76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(1, 1), match=''>\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = re.search(r'(?=[\\w]+_[\\w]+)(?=[\\w_]{6,})', texte)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62bbdf51",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
