--- a/blog/support_regex.ipynb
+++ b/blog/support_regex.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "338e5750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##voir le billet sur mon blog : lien ici \n",
+    "\n",
+    "https://germanlinux.blogspot.com/2022/12/utilisation-avancee-des-groupes-dans.html"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "274dea2f",
    "metadata": {},
@@ -202,18 +214,20 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3886324264.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [10]\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(cp,'=>', result.group(cp), result. )\u001b[0m\n\u001b[1;37m                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('suis', 'suis')\n",
+      "0 => suis suis (11, 20)\n",
+      "1 => suis (11, 15)\n",
+      "2 => suis (16, 20)\n"
      ]
     }
    ],
    "source": [
     "print(result.groups())\n",
     "for cp in range(len(result.groups()) + 1):\n",
-    "    print(cp,'=>', result.group(cp), result. )"
+    "    print(cp,'=>', result.group(cp), result.span(cp) )"
    ]
   },
   {
@@ -233,22 +247,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1ee77ace",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "suis\n"
+     ]
+    }
+   ],
    "source": [
     "print(result.group('mot'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bd9c76fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'suis'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result.group(2)"
    ]
@@ -266,27 +299,41 @@
    "id": "372b2c36",
    "metadata": {},
    "source": [
-    "### Utilisation des groupes pour des recherches avant et après \n"
+    "### Utilisation des groupes pour des recherches en avant et en arrière"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a870824f",
+   "id": "76774d04",
    "metadata": {},
    "source": [
-    "#### Exemple de recherche avant: on veut tronconner la chaine par groupe de 2 en partant de la fin.\n",
+    "#### Exemple de recherche en avant: on veut tronconner la chaine par groupe de 2 en partant de la fin.\n",
     "\n",
     "Avant de capturer un groupe, on va chercher à former des paires complète en avant du groupe à capturer.\n",
     "\n",
-    "Pour cela on utilise la sequence de groupe **(?=...)**  ou sa forme négative e **(?!...)**"
+    "Pour cela on utilise la sequence de groupe **(?=...)**  ou sa forme négative  **(?!...)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d27c3a48",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1', '89', None)\n",
+      "('23', '89', None)\n",
+      "('45', '89', None)\n",
+      "('67', '89', None)\n",
+      "('89', None, None)\n"
+     ]
+    }
+   ],
    "source": [
     "for item in re.finditer(r'(\\d{1,2})(?=(\\d\\d)+(?!(\\d))|\\Z)', '123456789'):\n",
     "    print(item.groups())"
@@ -294,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb882de2",
+   "id": "f28100eb",
    "metadata": {},
    "source": [
     "#### En ajoutant aux bons endroits le motif  \"?:\" on ne capture plus les groupes inutiles\n",
@@ -304,10 +351,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "aa320fcf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('1',) (0, 1)\n",
+      "('23',) (1, 3)\n",
+      "('45',) (3, 5)\n",
+      "('67',) (5, 7)\n",
+      "('89',) (7, 9)\n"
+     ]
+    }
+   ],
    "source": [
     "for item in re.finditer(r'(\\d{1,2})(?=(?:\\d\\d)+(?!(?:\\d))|\\Z)', '123456789'):\n",
     "    print(item.groups(),item.span())"
@@ -315,17 +374,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aeb5e665",
+   "id": "656becb0",
    "metadata": {},
    "source": [
-    "#### De manière symetrique à la recherche avant, il est possible de faire dépendre la recherche d'un motif sur du texte situé en arrière.\n",
+    "#### De manière symetrique à la recherche en avant, il est possible de faire dépendre la recherche d'un motif sur du texte situé en arrière.\n",
     "\n",
     "Cette opération se réalise avec le motif **(?<=...)**  ou par sa négation **(?<!...)**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2309f4f4",
+   "id": "3e5b016a",
    "metadata": {},
    "source": [
     "#### S assurer que le texte se termine strictement par 2 chiffres "
@@ -333,10 +392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5b03b25c",
+   "execution_count": 15,
+   "id": "1f3b106f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(5, 7), match='45'>\n"
+     ]
+    }
+   ],
    "source": [
     "texte = 'abcde45'\n",
     "result = re.search(r'\\d\\d', texte)\n",
@@ -345,10 +412,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0bd20f9",
+   "execution_count": 16,
+   "id": "a02b1716",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 7), match='abcde45'>\n"
+     ]
+    }
+   ],
    "source": [
     "result = re.search(r'\\D+\\d\\d', texte)\n",
     "print(result)"
@@ -356,10 +431,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ca20e2d8",
+   "execution_count": 17,
+   "id": "43b021f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(5, 7), match='45'>\n"
+     ]
+    }
+   ],
    "source": [
     "result = re.search(r'(?<=\\D)\\d\\d', texte)\n",
     "print(result)"
@@ -367,31 +450,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a460e0e",
+   "id": "63c0d450",
    "metadata": {},
    "source": [
-    "### L'avantage des regards avant ou arrière (lookfor...) est qu'ils ne consomment pas de caractère. Il est donc possible de chainer les conditions"
+    "### L'avantage des regards avant ou arrière (look...) est qu'ils ne consomment pas de caractère. Il est donc possible de chainer les conditions"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "63c942a0",
+   "id": "e4a91ab1",
    "metadata": {},
    "source": [
     "#### Verification d'un identifiant twitter qui fait 6 caractères et un undescore mais pas aux extremités"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b90aa81d",
+   "metadata": {},
+   "source": [
+    "#####  vérification des 6 caractères minimum"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "05932b61",
+   "execution_count": 18,
+   "id": "259f0425",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<re.Match object; span=(0, 8), match='e_german'>\n"
+      "<re.Match object; span=(1, 9), match='e_german'>\n"
      ]
     }
    ],
@@ -402,9 +493,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc597f06",
+   "metadata": {},
+   "source": [
+    "#####  vérification des  restrictions sur le '_'"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "2ef553f2",
+   "execution_count": 19,
+   "id": "145c5f9b",
    "metadata": {},
    "outputs": [
     {
@@ -421,9 +520,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f908f5f",
+   "metadata": {},
+   "source": [
+    "#####  On met bout à bout les 2 conditions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "55206e76",
+   "execution_count": 20,
+   "id": "dd3e937a",
    "metadata": {},
    "outputs": [
     {
@@ -438,14 +545,6 @@
     "result = re.search(r'(?=[\\w]+_[\\w]+)(?=[\\w_]{6,})', texte)\n",
     "print(result)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62bbdf51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
