--- a/blog/support_regex.ipynb
+++ b/blog/support_regex.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "338e5750",
+   "cell_type": "markdown",
+   "id": "8e05932e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "##voir le billet sur mon blog : lien ici \n",
+    "## voir le billet sur mon blog : lien dessous\n",
     "\n",
     "https://germanlinux.blogspot.com/2022/12/utilisation-avancee-des-groupes-dans.html"
    ]
@@ -304,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76774d04",
+   "id": "4ae4b520",
    "metadata": {},
    "source": [
     "#### Exemple de recherche en avant: on veut tronconner la chaine par groupe de 2 en partant de la fin.\n",
@@ -341,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f28100eb",
+   "id": "7f98a18d",
    "metadata": {},
    "source": [
     "#### En ajoutant aux bons endroits le motif  \"?:\" on ne capture plus les groupes inutiles\n",
@@ -374,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "656becb0",
+   "id": "a1ea4da9",
    "metadata": {},
    "source": [
     "#### De manière symetrique à la recherche en avant, il est possible de faire dépendre la recherche d'un motif sur du texte situé en arrière.\n",
@@ -384,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e5b016a",
+   "id": "d5c81844",
    "metadata": {},
    "source": [
     "#### S assurer que le texte se termine strictement par 2 chiffres "
@@ -393,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1f3b106f",
+   "id": "b9949e17",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a02b1716",
+   "id": "d847e9c6",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "43b021f6",
+   "id": "fbca8834",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c0d450",
+   "id": "40b7b5a0",
    "metadata": {},
    "source": [
     "### L'avantage des regards avant ou arrière (look...) est qu'ils ne consomment pas de caractère. Il est donc possible de chainer les conditions"
@@ -458,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4a91ab1",
+   "id": "7cef8e9a",
    "metadata": {},
    "source": [
     "#### Verification d'un identifiant twitter qui fait 6 caractères et un undescore mais pas aux extremités"
@@ -466,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b90aa81d",
+   "id": "76c30c7d",
    "metadata": {},
    "source": [
     "#####  vérification des 6 caractères minimum"
@@ -475,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "259f0425",
+   "id": "8e8147ce",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc597f06",
+   "id": "722805c2",
    "metadata": {},
    "source": [
     "#####  vérification des  restrictions sur le '_'"
@@ -503,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "145c5f9b",
+   "id": "d00806df",
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f908f5f",
+   "id": "3980b9c5",
    "metadata": {},
    "source": [
     "#####  On met bout à bout les 2 conditions"
@@ -530,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dd3e937a",
+   "id": "1078db08",
    "metadata": {},
    "outputs": [
     {
