--- a/8587_2/manip_base.ipynb
+++ b/8587_2/manip_base.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Surcharge d'une classe de base\n",
+    "\n",
+    "Exemple avec une liste.\n",
+    "1. Importer la classe modèle concue pour etre surchargée\n",
+    "2. Répérer dans les documentations quelles sont les méthodes à surcharger\n",
+    "\n",
+    "_In addition to supporting the methods and operations of mutable sequences, UserList instances provide the following attribute:\n",
+    "__data__\n",
+    "A real list object used to store the contents of the UserList class._\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -18,6 +33,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remarque : Pourquoi les méthodes ne sont pas symétriques ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On fabrique une liste"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -25,6 +54,13 @@
    "source": [
     "a = MaListe(['r', 'b','c'])\n",
     "a.extend(['aa', 'bb', 'cc', 'out'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### On teste"
    ]
   },
   {
@@ -86,7 +122,14 @@
     }
    ],
    "source": [
-    "a[10]"
+    "a[10] # Erreur normale qu'on peut contourner en retournant quelque : 0 ,none , False etc. (comment ...?)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examiner le contenu de l'objet"
    ]
   },
   {
