--- a/blog/echelle_des_classe.ipynb
+++ b/blog/echelle_des_classe.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2fa911f2",
+   "metadata": {},
+   "source": [
+    "### Avec SimpleNamespace"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5e951066",
@@ -88,87 +96,213 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49b19e83",
+   "metadata": {},
+   "source": [
+    "### Avec namedtuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2fca60ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import namedtuple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef308252",
+   "metadata": {},
+   "source": [
+    "### Définition d'une pseudo-classe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a9d60fb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Rectangle = namedtuple('Rectangle', ['longueur', 'largeur']) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74e8cc05",
+   "metadata": {},
+   "source": [
+    "### instantiation et manipulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "05d6a618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "r1  = Rectangle(12, 5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "76ec94b8",
+   "id": "398a133c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on class SimpleNamespace in types:\n",
-      "\n",
-      "types.SimpleNamespace = class SimpleNamespace(builtins.object)\n",
-      " |  A simple attribute-based namespace.\n",
-      " |  \n",
-      " |  SimpleNamespace(**kwargs)\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __delattr__(self, name, /)\n",
-      " |      Implement delattr(self, name).\n",
-      " |  \n",
-      " |  __eq__(self, value, /)\n",
-      " |      Return self==value.\n",
-      " |  \n",
-      " |  __ge__(self, value, /)\n",
-      " |      Return self>=value.\n",
-      " |  \n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |  \n",
-      " |  __gt__(self, value, /)\n",
-      " |      Return self>value.\n",
-      " |  \n",
-      " |  __init__(self, /, *args, **kwargs)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  __le__(self, value, /)\n",
-      " |      Return self<=value.\n",
-      " |  \n",
-      " |  __lt__(self, value, /)\n",
-      " |      Return self<value.\n",
-      " |  \n",
-      " |  __ne__(self, value, /)\n",
-      " |      Return self!=value.\n",
-      " |  \n",
-      " |  __reduce__(...)\n",
-      " |      Return state information for pickling\n",
-      " |  \n",
-      " |  __repr__(self, /)\n",
-      " |      Return repr(self).\n",
-      " |  \n",
-      " |  __setattr__(self, name, value, /)\n",
-      " |      Implement setattr(self, name, value).\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods defined here:\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors defined here:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data and other attributes defined here:\n",
-      " |  \n",
-      " |  __hash__ = None\n",
-      "\n"
+      "Rectangle(longueur=12, largeur=5)\n"
      ]
     }
    ],
    "source": [
-    "help('types.SimpleNamespace')"
+    "print(r1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54703592",
+   "metadata": {},
+   "source": [
+    "### Manipulation comme un objet ou comme un tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "9a8687df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r1.largeur, r1[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdf6f857",
+   "metadata": {},
+   "source": [
+    "### A partir d'un iterable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "aa0e4934",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangle(longueur=15, largeur=5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rdim  = [15, 5]\n",
+    "r2 = Rectangle._make(rdim)\n",
+    "print(r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bedbb35e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getattr(r2, 'longueur')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f48c4b",
+   "metadata": {},
+   "source": [
+    "### A partir d'un dictionnaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d426cccb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rectangle(longueur=10, largeur=2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "rdict = {'largeur' :2, 'longueur' : 10 }\n",
+    "r3 = Rectangle(**rdict)\n",
+    "print(r3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6624539c",
+   "metadata": {},
+   "source": [
+    "### et réciproquement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a9f20f25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'longueur': 10, 'largeur': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "rdict = r3._asdict()\n",
+    "print(rdict)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05155647",
+   "id": "2c6f10d4",
    "metadata": {},
    "outputs": [],
    "source": []
