--- a/blog/echelle_des_classe.ipynb
+++ b/blog/echelle_des_classe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2fa911f2",
+   "id": "e142f9bd",
    "metadata": {},
    "source": [
     "### Avec SimpleNamespace"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49b19e83",
+   "id": "02734ad2",
    "metadata": {},
    "source": [
     "### Avec namedtuple"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2fca60ec",
+   "id": "cca52187",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef308252",
+   "id": "c991f04b",
    "metadata": {},
    "source": [
     "### Définition d'une pseudo-classe"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a9d60fb2",
+   "id": "cc3aee1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e8cc05",
+   "id": "baba1c70",
    "metadata": {},
    "source": [
     "### instantiation et manipulation"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "05d6a618",
+   "id": "68d753b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "398a133c",
+   "id": "cfdc03d4",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54703592",
+   "id": "e77cfbf9",
    "metadata": {},
    "source": [
     "### Manipulation comme un objet ou comme un tuple"
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9a8687df",
+   "id": "30023dd6",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdf6f857",
+   "id": "4aa2925b",
    "metadata": {},
    "source": [
     "### A partir d'un iterable"
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aa0e4934",
+   "id": "bdc2cb17",
    "metadata": {
     "scrolled": true
    },
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bedbb35e",
+   "id": "d63e4387",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0f48c4b",
+   "id": "5e8b5ee4",
    "metadata": {},
    "source": [
     "### A partir d'un dictionnaire"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d426cccb",
+   "id": "2fb93272",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6624539c",
+   "id": "07a50315",
    "metadata": {},
    "source": [
     "### et réciproquement"
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a9f20f25",
+   "id": "7b29e345",
    "metadata": {},
    "outputs": [
     {
@@ -300,9 +300,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f02776b5",
+   "metadata": {},
+   "source": [
+    "### Création à la volée d'un objet à partir d'une ligne json."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab8bc178",
+   "metadata": {},
+   "source": [
+    "#### soit la structure json : \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "07941fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "var = json.loads(\"{\\\"un\\\": 1, \\\"deux\\\": 2, \\\"trois\\\": 3, \\\"dizaine\\\": [10, 20, 30, 40]}\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ff57bf28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'un': 1, 'deux': 2, 'trois': 3, 'dizaine': [10, 20, 30, 40]} <class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(var, type(var))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "10ce55e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import types\n",
+    "obj = json.loads(\"{\\\"un\\\": 1, \\\"deux\\\": 2, \\\"trois\\\": 3, \\\"dizaine\\\": [10, 20, 30, 40]}\",object_hook= lambda d: types.SimpleNamespace(**d) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "1b9aa418",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "namespace(un=1, deux=2, trois=3, dizaine=[10, 20, 30, 40])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "61b8c7eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj.deux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b06c2c84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "obj.deux = 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "5ae32ec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'un': 1, 'deux': 3, 'trois': 3, 'dizaine': [10, 20, 30, 40]}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vars(obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c21d18ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', 'deux', 'dizaine', 'trois', 'un']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(obj), sep = ',')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c6f10d4",
+   "id": "793a3bac",
    "metadata": {},
    "outputs": [],
    "source": []
