--- a/blog/echelle_des_classe.ipynb
+++ b/blog/echelle_des_classe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e142f9bd",
+   "id": "40b1f0c2",
    "metadata": {},
    "source": [
     "### Avec SimpleNamespace"
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02734ad2",
+   "id": "799173bd",
    "metadata": {},
    "source": [
     "### Avec namedtuple"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cca52187",
+   "id": "b3948035",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c991f04b",
+   "id": "00386ffe",
    "metadata": {},
    "source": [
     "### Définition d'une pseudo-classe"
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cc3aee1e",
+   "id": "195ca2f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baba1c70",
+   "id": "a22fd79c",
    "metadata": {},
    "source": [
     "### instantiation et manipulation"
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "68d753b8",
+   "id": "31dee7b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cfdc03d4",
+   "id": "e20a0ab3",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e77cfbf9",
+   "id": "57a5942e",
+   "metadata": {},
+   "source": [
+    "### Les namedtuples sont très utilent pour manipuler des résultats d'une requete SQL ou des fichiers structurés"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d344ebb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8918c5eb",
    "metadata": {},
    "source": [
     "### Manipulation comme un objet ou comme un tuple"
@@ -178,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "30023dd6",
+   "id": "57a79f04",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa2925b",
+   "id": "f747e889",
    "metadata": {},
    "source": [
     "### A partir d'un iterable"
@@ -204,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bdc2cb17",
+   "id": "f19d2d15",
    "metadata": {
     "scrolled": true
    },
@@ -226,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d63e4387",
+   "id": "c99aa7bc",
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e8b5ee4",
+   "id": "6b9666f3",
    "metadata": {},
    "source": [
     "### A partir d'un dictionnaire"
@@ -255,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2fb93272",
+   "id": "db2f6357",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a50315",
+   "id": "3cd74368",
    "metadata": {},
    "source": [
     "### et réciproquement"
@@ -283,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7b29e345",
+   "id": "dde50e0f",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f02776b5",
+   "id": "48d38f65",
    "metadata": {},
    "source": [
     "### Création à la volée d'un objet à partir d'une ligne json."
@@ -309,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab8bc178",
+   "id": "33869bc0",
    "metadata": {},
    "source": [
     "#### soit la structure json : \n"
@@ -318,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "07941fe6",
+   "id": "bd300a78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ff57bf28",
+   "id": "bf5dae3c",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "10ce55e9",
+   "id": "e7780b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1b9aa418",
+   "id": "94ef2bff",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "61b8c7eb",
+   "id": "261f5e19",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "b06c2c84",
+   "id": "397d3a2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "5ae32ec6",
+   "id": "595af1c7",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c21d18ff",
+   "id": "79a20372",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793a3bac",
+   "id": "daab5bd4",
    "metadata": {},
    "outputs": [],
    "source": []
